Improves the auto-link feature
AS-IS:
 - The hook method in yobi.Markdown.js generates a auto-link.
 - If user's input text matches the certain reference pattern, an auto-link is created without validation check.
 - If user's all projects do not have a same name of found project, some link(ex: User#Num, User@SHA) will be broken.

TO-BE:
 - MarkdownApp class is added to generate an auto-link.
 - The link is created on server side.
 - The hook method in yobi.Markdown.js is removed.
 - If the target object(issue, commit, etc) of auto-link is not exsists, do not generate link.

--- a/app/views/board/partial_comments.scala.html
+++ b/app/views/board/partial_comments.scala.html
@@ -25,6 +25,7 @@
 @import utils.AccessControl._
 @import utils.JodaDateUtil
 @import play.libs.Json.toJson
+@import utils.Markdown
 
 @isAuthorComment(commentId: String) = @{
     if(commentId == UserApp.currentUser().loginId) {"author"}
@@ -63,7 +64,7 @@
             @common.commentUpdateForm(comment.id, routes.BoardApp.newComment(project.owner, project.name, post.getNumber).toString(), comment.contents)
 
             <div id="comment-body-@comment.id">
-                <div class="comment-body markdown-wrap markdown-before" markdown="true">@comment.contents</div>
+                <div class="comment-body markdown-wrap">@Html(Markdown.render(comment.contents, project))</div>
                 <div class="attachments pull-right" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.NONISSUE_COMMENT.toString(), comment.id.toString()))"></div>
             </div>
         </div>
