--- a/app/views/partial_comment_thread.scala.html
+++ b/app/views/partial_comment_thread.scala.html
@@ -22,6 +22,7 @@
 
 @import utils.JodaDateUtil
 @import play.libs.Json.toJson
+@import utils.Markdown
 
 <div id="thread-@thread.id" data-state="@thread.state.toString().toLowerCase()"
      class="comment-thread-wrap @thread.state.toString().toLowerCase()
@@ -71,7 +72,7 @@
                     }
                 </div>
 
-                <div class="comment-body markdown-wrap markdown-before" markdown="true">@comment.getContents</div>
+                <div class="comment-body markdown-wrap">@Html(Markdown.render(comment.getContents, comment.asResource().getProject()))</div>
                 <div class="attachments" data-attachments="@toJson(AttachmentApp.getFileList(comment.asResource().getType().toString(), comment.id.toString()))"></div>
             </div>
         </li>
