User: Memoize some methods to check the role
The methods are:

* isManagerOf
* isMemberOf
* isSiteManager

This memoization makes AccessControl much faster so improves the overall
performance. It will reduce the time taken to read an issue by 26%, from
my test with 100 real issues.

--- a/app/views/help/keymap.scala.html
+++ b/app/views/help/keymap.scala.html
@@ -56,7 +56,7 @@
                 }
 
                 @if(project != null ) {
-                    @if(ProjectUser.roleOf(session.get("loginId"), project).equals("manager")){
+                    @if(UserApp.currentUser.isManagerOf(project)){
                         <span class="ybtn ybtn-small">Q</span>
                         <span class="help-inline">@Messages("project.setting")</span><br>
                     }
