중간 크기 창에서 스크롤바가 생기는 문제 수정

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -39,6 +39,7 @@
         position: absolute;
         width: 100%;
         z-index: 1000;
+        padding: 0;
 
         .gnb-inner {
             .logo {
