fixes a bug that site admin does not have group admin authorization.
* Issue
    - Logics for site admin authroization are omitted in organization codes.
    - Some validations does not check authroizations and have bugs.

* Solution
    - Bugs are fixed and site admin authroization logics are added.

Private-issue: 1855

--- a/app/views/error/forbidden_organization.scala.html
+++ b/app/views/error/forbidden_organization.scala.html
@@ -18,11 +18,14 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(messageKey:String = "error.forbidden", organization: Organization)
+@(messageKey:String = "error.forbidden", org: Organization)
 
-@siteLayout(organization.name, utils.MenuType.NONE) {
-    <div class="site-breadcrumb-outer">
-        <div class="site-breadcrumb-inner">
+@organizationLayout(org.name, utils.MenuType.NONE, org) {
+    @organization.header(org)
+    @organization.menu(org)
+
+    <div class="page-wrap-outer">
+        <div class="project-page-wrap">
             <div class="error-wrap">
                 <i class="ico ico-err2"></i>
                 <p>@Messages(messageKey)</p>
