--- a/app/views/git/edit.scala.html
+++ b/app/views/git/edit.scala.html
@@ -81,9 +81,12 @@
                     <!-- // -->
                 </div>
 
-                <div id="status" class="alert mt20 mb20">
-                    @Messages("pullRequest.is.merging")
-                </div>
+                <span id="pullRequestState" data-value="@pullRequest.state"></span>
+                @if(pullRequest.isOpen) {
+                    <div id="status" class="alert mt20 mb20">
+                        @Messages("pullRequest.is.merging")
+                    </div>
+                }
 
                 <div>
                     <input type="text" id="title" name="title" maxlength="255" class="text"
@@ -131,7 +134,8 @@ $(function(){
         "fromProject" : $("#fromProjectId"),
         "toProject"   : $("#toProjectId"),
         "fromBranch"  : $("#fromBranch"),
-        "toBranch"    : $("#toBranch")
+        "toBranch"    : $("#toBranch"),
+        "state"       : $("#pullRequestState").data("value")
     });
 
     // yobi.Mention
