Fix the disappeared link to the Site Admin
The link was disappeared on the Global Navigation Bar since we use Play
2.3

--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -42,7 +42,7 @@
                 </li>
             </ul>
         </li>
-        @if(requestHeader.session.get("userId").equals("1")) {
+        @if(UserApp.currentUser.isSiteManager) {
         <li class="gnb-usermenu-item">
             <a href="@routes.SiteApp.userList()" data-toggle="tooltip" title="@Messages("menu.siteAdmin")" data-placement="bottom" class="usermenu-icon-button">
                 <i class="yobicon-wrench"></i>
