Reduced queries for the project's dashboard
Problem
* too mamy queries are occured when view project's dashboard.
* this can consume all db connections in a very short time.
* It took 2.5 minuetes to see the page in my local environment.

Solution
* Removed n+1 select queries.
* After this commit, it takes only 900ms to load the page.

--- a/app/views/project/partial_dashboard_issuesbylabel.scala.html
+++ b/app/views/project/partial_dashboard_issuesbylabel.scala.html
@@ -40,7 +40,7 @@
                         </a>
                     </div>
                     <div class="span2 num">
-                        <strong>@countOpenIssuesBy(project, Map("labelIds"->label.id.toString))</strong>
+                        <strong>@Issue.countOpenIssuesByLabel(project, label)</strong>
                     </div>
                 </div>
             }
