--- a/app/views/project/partial_dashboard_issuesbyassignee.scala.html
+++ b/app/views/project/partial_dashboard_issuesbyassignee.scala.html
@@ -29,19 +29,19 @@
         <a href="@routes.IssueApp.newIssueForm(project.owner, project.name)" target="_blank" class="ybtn ybtn-small">@Messages("issue.menu.new")</a>
     </div>
 } else {
-    @for(member <- project.members) {
-        @defining(countOpenIssuesBy(project, Map("assigneeId"->member.user.id.toString))) { assignedIssues =>
+    @for(assignee <- project.assignees) {
+        @defining(Issue.countOpenIssuesByAssignee(project, assignee)) { assignedIssues =>
             @defining(getPercent(assignedIssues, totalIssues)){ assignedPerc =>
                 @if(assignedIssues > 0){
                     <div class="row-fluid">
                         <div class="span6">
-                            <a href="@makeIssuesLink(project, scala.collection.immutable.Map("assigneeId"->member.user.id.toString))"
-                            class="usf-group" title="@member.user.name (@{"@"}@member.user.loginId)">
+                            <a href="@makeIssuesLink(project, scala.collection.immutable.Map("assigneeId"->assignee.user.id.toString))"
+                            class="usf-group" title="@assignee.user.name (@{"@"}@assignee.user.loginId)">
                                 <span class="avatar-wrap smaller">
-                                    <img src="@member.user.avatarUrl" width="20" height="20">
+                                    <img src="@assignee.user.avatarUrl" width="20" height="20">
                                 </span>
-                                <strong class="name">@member.user.name</strong>
-                                <span class="loginid"> <strong>@{"@"}</strong>@member.user.loginId</span>
+                                <strong class="name">@assignee.user.name</strong>
+                                <span class="loginid"> <strong>@{"@"}</strong>@assignee.user.loginId</span>
                             </a>
                         </div>
                         <div class="span3 num">
@@ -58,7 +58,7 @@
         }
     }
 
-    @defining(countOpenIssuesBy(project, Map("assigneeId"->User.anonymous.id.toString))) { notAssignedIssues =>
+    @defining(Issue.countOpenIssuesByAssignee(project, null)) { notAssignedIssues =>
         @defining(getPercent(notAssignedIssues, totalIssues)) { notAssignedPerc =>
             <div class="row-fluid">
                 <div class="span6">
