Enhanced performance for counting notifications
Problem
* So many columns are used when counting notifications.

Solution
* Fixed to use only one column by using raw sql for counting notifications,
and it reduces the fist page's loading time.

--- a/app/views/index/partial_notifications.scala.html
+++ b/app/views/index/partial_notifications.scala.html
@@ -96,7 +96,7 @@
     }
 }
 
-@if(UserApp.currentUser.notificationEvents.size > size){
+@if(NotificationEvent.getNotificationsCount(UserApp.currentUser()) > size){
 <li><a href="javascript: void(0);" id="notification-more" class="ybtn">More</a></li>
 <script type="text/javascript">
     $(document).ready(function(){
