Render markdown in project description

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2259,6 +2259,13 @@ label.inline-list {
             line-height: 30px;
             font-size:14px;
             font-weight: normal;
+
+            .markdown-wrap {
+                p {
+                    margin: 0;
+                    display: inline-block;
+                }
+            }
         }
 
         .project-description-edit {
