fixes an exception which occurs when there is no HTTP referer.
* Issue

When board's post view page is loaded and there is not HTTP referer, an exception occurs.
Because there is no statements checking referer existence.

* Soltuion

Statements checking referer are added.

Private-issue: 2074

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -28,7 +28,12 @@
 @import utils.Markdown
 @implicitField = @{ helper.FieldConstructor(simpleForm) }
 
-@urlToPostings = @{ urlToList(requestHeader.headers.get("Referer").get, routes.BoardApp.posts(project.owner, project.name).toString()) }
+@urlToPostings = @{
+    requestHeader.headers.get("Referer") match {
+        case Some(url) => { urlToList(url, routes.BoardApp.posts(project.owner, project.name).toString) }
+        case _ => routes.BoardApp.posts(project.owner, project.name).toString
+    }
+}
 
 @projectLayout(post.title, project, utils.MenuType.BOARD){
 @projectMenu(project, utils.MenuType.BOARD, "main-menu-only")
