--- a/app/views/git/partial_pull_request_event.scala.html
+++ b/app/views/git/partial_pull_request_event.scala.html
@@ -55,7 +55,7 @@
             @if(event.newValue == PullRequestReviewAction.DONE.name) {
             <li class="event" id="comment-@event.id">
                 <span class="state changed">@Messages("pullRequest.review")</span>
-                @Html(Messages("notification.pullrequestHeader.reviewed",linkToUser(user.loginId, user.name)))
+                @Html(Messages("notification.pullrequest.reviewed",linkToUser(user.loginId, user.name)))
                 <span class="date">
                     <a href="#event-@event.id" title="@getDateString(event.getDate())">@agoOrDateString(event.getDate())</a>
                 </span>
@@ -63,7 +63,7 @@
             } else {
             <li class="event" id="comment-@event.id">
                 <span class="state changed">@Messages("pullRequest.unreview")</span>
-                @Html(Messages("notification.pullrequestHeader.unreviewed", linkToUser(user.loginId, user.name)))
+                @Html(Messages("notification.pullrequest.unreviewed", linkToUser(user.loginId, user.name)))
                 <span class="date">
                     <a href="#event-@event.id" title="@getDateString(event.getDate())">@agoOrDateString(event.getDate())</a>
                 </span>
