`Create New Project` button on group's view is not displayed when current user is not group admins or a site admin.
* Issue
    - `Create new project` button on group's view is shown always altough current user is not a group admin.

* Solution
    - The button will not be displayed when current user is group admins and a site admin.

Private-issue: 2110

--- a/app/views/organization/view.scala.html
+++ b/app/views/organization/view.scala.html
@@ -62,9 +62,11 @@
                             <button type="button" class="search-btn"><i class="yobicon-search"></i></button>
                         </div>
                     </div>
+                    @if(OrganizationUser.isAdmin(org, UserApp.currentUser) || UserApp.currentUser().isSiteManager) {
                     <div class="span3">
                         <a href="@routes.ProjectApp.newProjectForm()?owner=@org.name" class="ybtn ybtn-primary">@Messages("button.newProject")</a>
                     </div>
+                    }
                 </div>
                 <ul class="all-projects">
                     @for(project <- org.getVisibleProjects(UserApp.currentUser())) {
