--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6239,3 +6239,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   border-radius: 2px;
   color: #3592B5;
 }
+
+#s2id_projects {
+  margin-top: 10px;
+}
+
