organization: add unified group board view page

--- a/app/views/common/select2.scala.html
+++ b/app/views/common/select2.scala.html
@@ -45,3 +45,16 @@
     ${name}
 </div>
 </script>
+<script id="tplSelect2Projects" type="text/x-jquery-tmpl">
+<div class="usf-group" title="${name}>
+    <span class="avatar-wrap smaller"><img src="${avatarURL}" width="16" height="16"></span>
+    <span class="name">${name}</span>
+</div>
+</script>
+<script id="tplSelect2ProjectsWithoutAvatar" type="text/x-jquery-tmpl">
+<div class="usf-group" title="${name}>
+    <span class="avatar-wrap smaller"> </span>
+    <span class="name">${name}</span>
+</div>
+</script>
+
