organization: change some css style of unified issue list view
Now, project name is placed in the back of list items.

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6244,3 +6244,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   margin-top: 10px;
 }
 
+.group-project-name {
+  font-size: 12px;
+  font-weight: bold;
+  margin-right: 10px;
+}
