CodeBrowser: Fix render for markdown files

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4147,6 +4147,11 @@ label.issue-item-row {
         border-top: none;
         font-size: 14px;
         padding: 25px;
+
+        p {
+            margin: 15px 0;
+            text-align: left;
+        }
     }
 
     /** list **/
