hotfix: revoke markdown preview at comments
Some code snippet related to markdown preview was removed by mistake.
This fix revoke it.

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -119,6 +119,7 @@
 		<button type="button" class="ybtn" data-dismiss="modal">@Messages("button.no")</button>
 	</div>
 </div>
+@common.markdown(project)
 @common.commentDeleteModal()
 
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
