--- a/app/views/code/partial_view_file.scala.html
+++ b/app/views/code/partial_view_file.scala.html
@@ -117,4 +117,5 @@
 }
 }
 }
+@common.markdown(project)
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/ace/ace.js")"></script>
