--- a/app/views/milestone/view.scala.html
+++ b/app/views/milestone/view.scala.html
@@ -134,6 +134,7 @@
     </div>
 </div>
 
+@common.markdown(project)
 <link rel="stylesheet" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)" type="text/css" />
 <script type="text/javascript">
     $(document).ready(function(){
