--- a/app/views/project/partial_readme.scala.html
+++ b/app/views/project/partial_readme.scala.html
@@ -48,4 +48,5 @@
     <div class="readme-body markdown-wrap">@Html(Markdown.render(project.readme, project, false))</div>
   </div>
 }
+@common.markdown(project)
 </div>
