hotfix: fix voter bug
This patch fix the bug some user can't see issues
whose have more than 4 voters.
We will find the reason later.

--- a/app/views/issue/partial_voters.scala.html
+++ b/app/views/issue/partial_voters.scala.html
@@ -59,13 +59,13 @@
         <ul class="unstyled">
         @for(voter <- issue.voters){
             <li>
-                <a href="@routes.UserApp.userInfo(voter.loginId)" class="usf-group" target="_blank">
+                <span>
                     <span class="avatar-wrap mlarge">
                         <img src="@voter.avatarUrl" width="40" height="40">
                     </span>
                     <strong class="name">@voter.name</strong>
                     <span class="loginid"> <strong>@{"@"}</strong>@voter.loginId</span>
-                </a>
+                </span>
             </li>
         }
         </ul>
