--- a/app/views/git/clone.scala.html
+++ b/app/views/git/clone.scala.html
@@ -42,8 +42,7 @@
 </div>
 <script type="text/javascript">
     $(function(){
-        yobi.ui.Spinner.show();
-
+        NProgress.start();
         setTimeout(function(){
             var cloneUrl = "@routes.PullRequestApp.doClone(project.originalProject.owner, project.originalProject.name)";
             var cloneParam = {owner:"@project.owner", name:"@project.name", projectScope:"@project.projectScope.name"};
